src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BCON002__c</fullName>
        <label>￥￥_BCON002_取引先フリガナ</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCON004__c</fullName>
        <label>￥￥_BCON004_取引先名2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCON006__c</fullName>
        <label>￥￥_BCON006_インデックス</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLANC00__c</fullName>
        <label>￥￥_BLANC00_開始日付</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLANC01__c</fullName>
        <label>￥￥_BLANC01_終了日付</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <formula>LPAD( OFBID__c , 7, &apos;0&apos;)
+
  TEXT(Industry__c ) 
+
  TEXT(Payment__c ) 
+
 EmployeeNumberCode__c</formula>
        <label>取引先コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNumberCode__c</fullName>
        <formula>IF (
 AND(
 4999  &gt;= EmployeeNumber__c, 
 EmployeeNumber__c  &gt;= 1000
 ),
 &apos;B&apos;,
IF (
 AND(
 999  &gt;= EmployeeNumber__c, 
 EmployeeNumber__c  &gt;= 300
 ),
 &apos;M&apos;,
IF (
 AND(
 299  &gt;= EmployeeNumber__c, 
 EmployeeNumber__c  &gt;= 0
 ),
 &apos;S&apos;,
 &apos;O&apos;
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>従業員数コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <label>従業員数（カ）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>業種（カ）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Industry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OFBID__c</fullName>
        <label>OFBID</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>支払日</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CustomerCode__c</columns>
        <columns>OFBID__c</columns>
        <columns>Industry__c</columns>
        <columns>Payment__c</columns>
        <columns>EmployeeNumber__c</columns>
        <columns>EmployeeNumberCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべての取引先</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>